🔍️ Minor SEO change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Synergy Clinic - Coming Soon</title>
     <meta
       name="description"
-      content="Care. Strength. Nutrition. - Synergy Clinic is coming soon with a new website."
+      content="Healing in Synergy - Synergy Clinic is coming soon with a new website."
     />
   </head>
   <body>
